Bug with the truncation warning was fixed.

--- a/styles/diagram/_connectionsMenu.scss
+++ b/styles/diagram/_connectionsMenu.scss
@@ -303,6 +303,7 @@ div.element-in-popup-menu {
 
 .ontodia-connections-menu_objects-panel_bottom-panel__count-label .extra {
   color: gray;
+  cursor: help;
 }
 
 .ontodia-btn.ontodia-connections-menu_objects-panel_bottom-panel__add-button {
